[package]
name = "emfit"
version = "0.1.0"
edition = "2021"
description = "High-performance NTFS file scanner combining the best of WizTree and Everything"
authors = ["EmFit Contributors"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
thiserror = "1.0"
byteorder = "1.5"
parking_lot = "0.12"
rayon = "1.10"
crossbeam-channel = "0.5"
dashmap = "6.0"
memmap2 = "0.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "emfit"
path = "src/main.rs"

