[package]
name = "emfit"
version = "0.1.0"
edition = "2021"
description = "High-performance NTFS file scanner combining the best of WizTree and Everything"
authors = ["EmFit Contributors"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
thiserror = "2.0.18"
byteorder = "1.5.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
memmap2 = "0.9.10"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
console = "0.16.2"
humansize = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

regex = "1.12.3"

# TUI dependencies
ratatui = "0.30.0"
crossterm = "0.29"
unicode-width = "0.2.2"

# GUI dependencies
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
rfd = "0.17.2"
open = "5.3.3"
arboard = "3.6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "emfit"
path = "src/main.rs"

